src/components/Rooms.css
.room,
.sorting {
  padding: 1em;
  border: 1px solid transparent;
}

.room {
  flex-direction: column;
  border-bottom-color: #eee;
  cursor: pointer;
  transition: border-color 200ms ease, box-shadow 200ms ease;
  margin-top: -1px;
}

.room:hover,
.room.expanded {
  position: relative;
  z-index: 1;
  border-color: #ccc;
  box-shadow: 0 4px 8px rgba(0,0,0,.1);
}

.room-info {
  display: flex;
  flex-direction: row;
}

.room-info {
  margin-bottom: .75em;
}

.room-name {
  flex: 3;
  font-size: 1.4em;
  font-weight: bold;
  margin: 0 1em 0 0;
}

.room-type {
  flex: 1;
  font-size: 1.3em;
}

.room-capacity {
  flex: 1;
  font-size: 1.4em;
  font-weight: bold;
  text-align: right;
}

div.sorting {
  display: flex;
  flex-direction: row;
  padding-bottom: .5em;
  padding-top: .5em;
  border-bottom: 1px solid #ccc;
  cursor: default;
}

.sorting .sort-header {
  font-size: 1.4em;
  font-weight: bold;
  margin-top: 0;
  margin-bottom: 0;
  padding: .35em 0;
  cursor: pointer;
}

.bar {
  height: 6px;
  width: 100%;
  background-color: #f1f1f1;
  margin: 0 -1px;
  position: relative;
  overflow: hidden;
}

.booking,
.available,
.hour-tick,
.half-hour-tick {
  position: absolute;
  top: 0;
  bottom: 0;
}

.booking {
  background-color: #bebebe;
}

.available {
  background-color: #2ab12a;
}

.hour-tick,
.half-hour-tick {
  background-color: white;
  z-index: 1;
}

.hour-tick {
  width: 3px;
  margin-left: -1.5px;
}

.half-hour-tick {
  width: 1px;
  margin-left: -0.5px;
}

/*
  Bar loading animation
 */

@keyframes move-gradient {
  0% { background-position: 40% 0; }
  100% { background-position: -100% 0; }
}

.loading .bar {
  background-color: #eee;
}

.loading .booking,
.loading .available {
  opacity: .3;
}

.loading .room:nth-child(1) .bar { background: linear-gradient(to right, #eee, #cccccc 10%, #eee 20%, #eee); }
.loading .room:nth-child(2) .bar { background: linear-gradient(to right, #eee, #cfcfcf 10%, #eee 20%, #eee); }
.loading .room:nth-child(3) .bar { background: linear-gradient(to right, #eee, #d3d3d3 10%, #eee 20%, #eee); }
.loading .room:nth-child(4) .bar { background: linear-gradient(to right, #eee, #d6d6d6 10%, #eee 20%, #eee); }
.loading .room:nth-child(5) .bar { background: linear-gradient(to right, #eee, #dadada 10%, #eee 20%, #eee); }
.loading .room:nth-child(6) .bar { background: linear-gradient(to right, #eee, #dddddd 10%, #eee 20%, #eee); }
.loading .room:nth-child(7) .bar { background: linear-gradient(to right, #eee, #e0e0e0 10%, #eee 20%, #eee); }
.loading .room:nth-child(8) .bar { background: linear-gradient(to right, #eee, #e4e4e4 10%, #eee 20%, #eee); }
.loading .room:nth-child(9) .bar { background: linear-gradient(to right, #eee, #e7e7e7 10%, #eee 20%, #eee); }
.loading .room:nth-child(10) .bar { background: linear-gradient(to right, #eee, #ebebeb 10%, #eee 20%, #eee); }

.loading .room:nth-child(-n+10) .bar {
  background-size: 200% 100%;
  background-repeat: repeat-x;
  animation-name: move-gradient;
  animation-delay: 100ms;
  animation-duration: 1s;
  animation-timing-function: linear;
  animation-direction: normal;
  animation-iteration-count: infinite;
  animation-fill-mode: backwards;
  animation-play-state: running;
}

